2nd upload teddy

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,20 +3,20 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-    <h1>Notre version du super TP</h1>
-
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/var/www/html/TP-du-siecle/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/var/www/html/TP-du-siecle/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h1 class="jumbotron-heading">Notre super site e-Commerce</h1>
+            <p class="lead text-muted mb-0">Voici notre super version de site e-Commerce réalisée par Joëlle, Laura, Laurent, Teddy et Thomas</p>
+        </div>
+    </section>
+    <section class="container">
+        <div class="row">
+            <div class="col-12 col-md-9">
+                // Carousel
+            </div>
+            <div class="col-8 offset-2 col-md-3">
+                // Coup de coeur
+            </div>
+        </div>
+    </section>
 {% endblock %}
